storage/registry/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: registry
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    name: registry
