storage/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx-lan
  rules:
  - host: dummy.local
    http:
      paths:
      - backend:
          service:
            name: registry
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dummy.local
